tests/error/type_errors/not_not_bool.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: bool) -> bool:
6:        return not "x"
                     ^^^
GuppyTypeError: Expected expression of type `bool`, but got `'x'` of type `str`
